# citron

./: .gdb_history  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  debug-aarch64.sh  debug-riscv64.sh  raspi3.json  riscv32-citron.json  riscv64-citron.json  script.gdb  test.ps1  test.sh  virt.json
.cargo/: config.toml
src/: allocator.rs  arch.rs  boot.rs  debug.rs  fs.rs  graphics.rs  init.rs  kmain.rs  lib.rs  main.rs  process.rs  spinlock.rs
src/arch/: aarch64.rs  paging.rs  riscv64.rs  serial.rs  syscall.rs
src/arch/aarch64/: boot.S  boot.rs  gpio.rs  init.rs  layout.rs  serial.rs  start.rs  uart.rs
src/arch/riscv64/: boot.S  boot.rs  clint.rs  csr.rs  debug.rs  fs.rs  graphics.rs  init.rs  interrupt.rs  layout.rs  loader.rs  nullproc.rs  paging.rs  plic.rs  process.rs  serial.rs  start.rs  syscall.rs  trampoline.rs  trap.rs  uart.rs  virtio.rs
src/arch/riscv64/fs/: cfs.rs
src/arch/riscv64/fw_cfg/: fw.rs
src/arch/riscv64/virtio/: virtio_blk.rs  virtio_gpu.rs  virtio_input.rs
src/fs/: fat.rs
src/linker/: raspi3.ld  sifive_u.ld  temu.ld  virt.ld
tests/: print.rs  process.rs
