[package]
edition = "2018"
name = "citron"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
fatfs = {git = "https://github.com/rafalh/rust-fatfs.git", default-features = false}
# fscommon = {git = "https://github.com/rafalh/rust-fscommon.git", default-features = false, features = ["core_io"]}
intrusive-collections = "0.9.2"

[[bin]]
name = "citron"
path = "src/boot.rs"
