[package]
edition = "2018"
name = "citron"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
intrusive-collections = "0.9.2"
libm = "0.2.1"
micromath = "2.0.0"
tiny-skia = {version = "0.5.1", default-features = false, features = ["libm"]}

[[bin]]
name = "citron"
path = "src/boot.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
