[package]
edition = "2018"
name = "citron"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array-init = "2.0.0"
embedded-graphics = "0.7.1"
fontdue = "0.5.2"
hashbrown = "0.11.2"
intrusive-collections = "0.9.2"
libm = "0.2.1"
linked_list_allocator = "0.9.0"
micromath = "2.0.0"
tiny-skia = {version = "0.5.1", default-features = false, features = ["libm"]}
tinybmp = "0.3.1"
volatile-register = "0.2.1"

[[bin]]
name = "citron"
path = "src/boot.rs"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
